--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,9 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
     <title>신대방삼거리역 맛집</title>
-   </head>
+
+        <!-- 구글폰트-->
+        </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
@@ -23,10 +25,11 @@
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=cc3669d10885398bbb4f0abe08e3a8d2&libraries=services"></script>
     </script>
 
+
      <!--부트스트랩 -->
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
-   
+
   </body>
 </html>
